GNOME Bugzilla – Bug 732876
Crash when searching in history dialog
Last modified: 2014-07-11 18:35:32 UTC
Created attachment 280101 [details] backtrace Open the history dialog and search for any reasonably long search term, such as aaaaaaaaaaaaaa. Epiphany crashes reliably.
Robert, can you take a look at this please?
Actually that seems to happen regardless of the search term length, in case there are no results. Fix is on the way.
Created attachment 280122 [details] [review] Proposed patch Fixed the crash caused by no results in a history search.
Review of attachment 280122 [details] [review]: Looks good.
Review of attachment 280122 [details] [review]: Thanks!
Review of attachment 280122 [details] [review]: Committed with revision 6d8e4950a379f31e5b0ba78f9d2990f62bbfc54f.
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.