Fixed history window crash on no search results. https://bugzilla.gnome.org/show_bug.cgi?id=732876